--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@heroicons/react": "^2.2.0",
     "@octokit/rest": "^21.1.1",
     "@react-spring/three": "^9.7.5",
-    "@react-three/drei": "^9.88.7",
-    "@react-three/fiber": "^8.13.5",
+    "@react-three/drei": "^9.80.9",
+    "@react-three/fiber": "^8.14.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^12.6.3",
@@ -24,12 +24,14 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "tailwind-merge": "^2.2.1",
-    "three": "^0.153.0"
+    "three": "^0.154.0",
+    "three-mesh-bvh": "^0.6.8"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.175.0",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.3",
