--- a/package.json
+++ b/package.json
@@ -11,19 +11,24 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@octokit/rest": "^21.1.1",
+    "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "@react-spring/three": "^9.7.5",
     "@react-three/drei": "^9.80.9",
     "@react-three/fiber": "^8.14.5",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.6.3",
+    "lucide-react": "^0.503.0",
     "next": "14.1.3",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.6.0",
     "three": "^0.154.0",
     "three-mesh-bvh": "^0.6.8"
   },
