--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@react-icons/all-files": "^4.1.0",
     "@react-spring/three": "^9.7.5",
     "@react-three/drei": "^9.80.9",
     "@react-three/fiber": "^8.14.5",
